# gdansk-ai

./: CITATION.cff  README.md
ai-api/: .env_example  .gitignore  README.md  app.py  models.py  pyproject.toml  record-sample-wav.py  requirements.txt
web/: .env.local_example  .env_example  CHANGELOG.md  README.md  jsx.d.ts  next.config.js  package-lock.json  package.json  process.d.ts  tsconfig.json
web-api/: .env_example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
web-api/src/: app.ts  authorize.ts
web/src/components/: terms.module.css
web/src/lib/: auth.ts  useApi.ts  useLocalStorage.ts
web/src/pages/: _app.tsx  _document.tsx  index.tsx  terms.js  terms.module.css
web/src/pages/api/: buy-tokens.js  my-tokens.js  no_tokens.js  not_logged.js  question.js
web/src/pages/api/auth/: [...auth0].js  signup.ts
web/src/styles/: globals.css  page.css
web/src/utils/: api.ts  images.ts  navigation.ts
